tools/tests/errors/math_domain_asin.ki
discard import("math").asin(2)
